<resources>
    <string name="app_name">ProyectoFinalGrado</string>

    <!--LOGIN-->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="logingoogle">LOGIN WITH GOOGLE</string>
    <string name="loginfacebook">LOGIN WITH FACEBOOK</string>
    <string name="loginuser">LOGIN BY USERNAME</string>
    <string name="sing_in">SIGN IN</string>
    <string name="forgot_password">Have you forgotten the password?</string>

    <!--SIGN IN-->
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="phone_number">Phone number</string>
    <string name="next">NEXT</string>
    <string name="description">By clicking "Login", you agree to our terms and conditions. Find out more about how we process your data in our privacy policy and cookie policy.</string>
    <string name="subtitle">Ready to be part of the car community?</string>
    <string name="sing_in_google">SIGN IN WITH GOOGLE</string>
    <string name="sing_in_facebook">SIGN IN WITH FACEBOOK</string>
    <string name="sing_in_manual">SIGN IN 4 STEPS</string>
    <string name="change_preferences">Then you can change your preferences in settings</string>

    <!--SIGN IN 1-->
    <string name="step1">Step 1</string>
    <string name="title1">Create new account:</string>
    <string name="subtitle1">Select a username for identify your self in the app and add a password for protect your account. </string>

    <!--SIGN IN 2-->
    <string name="step2">Step 2</string>
    <string name="title2">Verify your account:</string>
    <string name="subtitle2">Select an email or phone number for verify your account in the app. </string>

    <!--SIGN IN 3-->
    <string name="step3">Step 3</string>
    <string name="title3">Make other users recognize you:</string>
    <string name="subtitle3">Choose a photo that represents you and put your name, so that everyone can recognize you. </string>
    <string name="btncamera">Camera</string>
    <string name="btngaleria">Galery</string>

    <!--SIGN IN 1-->
    <string name="step4">Step 4</string>
    <string name="title4">Last Step!</string>
    <string name="subtitle4">Do you want to add something to your bibliography? (Optional) </string>
    <string name="bibliography">Bibliography</string>
    <string name="skip">Skip step</string>
    <string name="create">CREATE ACCOUNT</string>


</resources>